--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,7 +1,17 @@
 
+<div class="nav-wrapper">
+  <div class="col s12" >
+    <!--<a href="/home" class="breadcrumb   blue-text "></a>-->
+    <!--<a href="#!" class="breadcrumb   blue-text">Home</a>-->
+    <a href="/home/channel" class="breadcrumb blue-text">channel</a>
+    <a  href="/home/{{id}}/content?title={{title}}" class="breadcrumb blue-text">{{title}}</a>
+
+  </div>
+</div>
+
 <!--<div class="col s6  m12">-->
   <div class="row " style="margin-top: 20px">
-
+``
     <div class="col s1">
       <div class="card">
 
@@ -100,7 +110,7 @@
           <div class="col s1  ">
 
 
-            <a class="btn-floating btn-large waves-effect waves-light blue"><i class="material-icons">add</i></a>
+            <a class="btn-floating btn-large waves-effect waves-light blue pulse"><i class="material-icons">add</i></a>
 
 
           </div>
