--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -11,7 +11,88 @@
 
 <mat-drawer-container class="container" autosize >
 
-            <div class="row " >
+
+  <!--admin view start-->
+
+  <div class="row " >
+
+    <!--<div class="col s1">-->
+      <!--<div class="card">-->
+
+      <!--</div>-->
+    <!--</div>-->
+
+
+    <div class="col s12">
+
+      <div class="row" >
+
+
+
+
+
+        <div class="col s3">
+          <div class="card circular-btn pointer">
+            <div class="card-content center khabri_tab_admin " >
+             Manage User
+            </div>
+          </div>
+        </div>
+
+        <div class="col s3">
+          <div class="card circular-btn pointer ">
+            <div class="card-content center khabri_tab_admin " >
+              Manage Channel
+            </div>
+          </div>
+        </div>
+
+        <div class="col s3">
+          <div class="card circular-btn pointer ">
+            <div class="card-content center khabri_tab_admin" >
+              Manage Tags
+            </div>
+          </div>
+        </div>
+
+        <div class="col s3">
+          <div class="card circular-btn pointer">
+            <div class="card-content center  khabri_tab_admin" >
+              Manage Roles
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+
+
+      </div>
+
+
+    </div>
+
+
+
+    <!--<div class="col s1 ">-->
+      <!--<div class="card">-->
+
+      <!--</div>-->
+    <!--</div>-->
+
+
+  </div>
+
+  <!--admin view ends-->
+
+
+
+
+
+
+  <div class="row " >
 
               <div class="col s4"  *ngFor="let content of channels">
 
