--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 button.btn-submit{
     background-color: #38547b;
     color: #fff;
@@ -87,15 +90,10 @@ div.error-message i{
 /*}*/
 
 
-.cdk-overlay-container{
-  width: 150px;
-  margin-left: 31%;
-  margin-top: -5%;
-}
 
-.side-nav-style{
-  background-color: #6E6767;
-}
+/*.side-nav-style{*/
+  /*background-color: #6E6767;*/
+/*}*/
 
 .mat-list-item-content {
   color: #7d868d;
@@ -110,9 +108,9 @@ div.error-message i{
 }
 
 
-.marin-top{
-  margin-top: 16px;
-}
+/*.marin-top{*/
+  /*margin-top: 16px;*/
+/*}*/
 
 .khabri_tab{
   border-radius: 2px;
@@ -151,18 +149,18 @@ div.error-message i{
 
 
 
-.breadcrumb1:before {
-  content: '\E5CC';
-  color: blue !important;
-  vertical-align: top;
-  display: inline-block;
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 25px;
-  margin: 0 10px 0 8px;
-  -webkit-font-smoothing: antialiased;
-}
+/*.breadcrumb1:before {*/
+  /*content: '\E5CC';*/
+  /*color: blue !important;*/
+  /*vertical-align: top;*/
+  /*display: inline-block;*/
+  /*font-family: 'Material Icons';*/
+  /*font-weight: normal;*/
+  /*font-style: normal;*/
+  /*font-size: 25px;*/
+  /*margin: 0 10px 0 8px;*/
+  /*-webkit-font-smoothing: antialiased;*/
+/*}*/
 
 
 .khabri_tab_admin{
