--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -112,7 +112,7 @@
             <div class="col s1  ">
 
 
-              <a class="btn-floating btn-large waves-effect waves-light blue pulse"><i class="material-icons">add</i></a>
+              <a class="btn-floating btn-large waves-effect waves-light blue pulse" (click)="addContent(id)" ><i class="material-icons">add</i></a>
 
 
             </div>
