--- a/src/app/add-content/add-content.component.html
+++ b/src/app/add-content/add-content.component.html
@@ -1,77 +1,205 @@
+<!--<div class="row">-->
+<!--<div class="col s12 offset-s2">-->
+<!--<div class="card grey lighten-2">-->
+<!--<div class="card-content white">-->
+<div class="row">
+
+  <form class="col s12 " #userRegistrationForm="ngForm" (ngSubmit)="OnSubmit(userRegistrationForm)">
+
+    <div class="row">
+
+      <!--<div class=" col s4">-->
+
+        <!--&lt;!&ndash;<div class="input-field ">&ndash;&gt;-->
+        <!--&lt;!&ndash;<input type="file" class="input-field" (change)="handleFileInput($event.target.files)"&ndash;&gt;-->
+        <!--&lt;!&ndash;placeholder="Upload file" accept=".pdf,.doc,.docx, .jpg">&ndash;&gt;-->
+        <!--&lt;!&ndash;<mat-progress-bar mode="determinate" value="{{fileProgressStatus}}"></mat-progress-bar>&ndash;&gt;-->
+
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+        <!--<div class="card white darken-1">-->
+
+          <!--<div class="card-content blue-text">-->
+            <!--<mat-card-title> upload Audio</mat-card-title>-->
+
+            <!--<input type="file" class="input-field" (change)="handleFileInput($event.target.files)"-->
+                   <!--placeholder="Upload file" accept=".pdf,.doc,.docx, .jpg">-->
+            <!--<mat-progress-bar mode="determinate" value="{{fileProgressStatus}}"></mat-progress-bar>-->
+
+
+            <!--<p><span>#</span>{{content.contentId}}</p>-->
+
+            <!--<p> {{content.title | limitTo:50}}</p>-->
+
+            <!--&lt;!&ndash;<img    width="200px" height="150px" src="{{fileToUpload}}">&ndash;&gt;-->
+
+
+          <!--</div>-->
+          <!--<div class="card-action ">-->
+
+            <!--<a class="pointer"><i class="material-icons" style="color:gray">edit</i></a>-->
+
+          <!--</div>-->
+
+
+        <!--</div>-->
+
+
+      <!--</div>-->
+
+
+      <div class=" col s12">
 
 
 
-  <!--<div class="row">-->
-    <!--<div class="col s12 offset-s2">-->
-      <!--<div class="card grey lighten-2">-->
-        <!--<div class="card-content white">-->
-          <div class="row">
+            <div class="card white darken-1">
 
-            <form class="col s12 white" #userRegistrationForm="ngForm" (ngSubmit)="OnSubmit(userRegistrationForm)">
+              <div class="card-content blue-text">
 
-              <div class="row">
-                <div class="input-field col s12">
-                  ajay
+                <div class="row">
 
-                  <div class="row">
-                    <div class="input-field col s2">
-                      <a class="pointer"><i class="material-icons" style="color:gray">cloud_upload</i></a>
-                      <a class="pointer"><i class="material-icons" style="color:gray">attach_file</i></a>
-
-
-                      <mat-progress-bar mode="determinate" value="100"></mat-progress-bar>
-
-                    </div>
-                    </div>
+                  <div class="col s6">
+                    <mat-card-title> upload Audio</mat-card-title>
+                    <input type="file" (change)="handleFileInput($event.target.files)"
+                           placeholder="Upload file" accept=".pdf,.doc,.docx, .jpg">
+                    <mat-progress-bar mode="determinate" value="{{fileProgressStatus}}"></mat-progress-bar>
 
 
 
-                </div>
+                    <div class="card white darken-1">
+
+                      <div class="card-content blue-text center">
+
+                    <span class="pointer " (click)="play(content.audioUrl,content.contentId)" >
+                  <mat-icon class="large material-icons pointer"  > play_circle_outline</mat-icon>
+
+                  <mat-icon class=" small material-icons pointer"  > pause_circle_outline</mat-icon>
+
+                  <a class="disabled"> <mat-icon class=" small material-icons disabled grey-text" > volume_off</mat-icon> </a>
+
+                </span>
+
+                      </div></div>
+
+
+                  </div>
+
+                  <div class="col s6">
+                    <mat-card-title> upload Image</mat-card-title>
+                    <input type="file"  (change)="handleFileInput($event.target.files)"
+                           placeholder="Upload file" accept=".pdf,.doc,.docx, .jpg">
+                    <mat-progress-bar mode="determinate" value="{{fileProgressStatus}}"></mat-progress-bar>
+                    <img    width="200px" height="200Px" src="https://scontent.fdel1-3.fna.fbcdn.net/v/t1.0-9/14900469_984588194986766_3209390422372239427_n.jpg?_nc_cat=0&oh=1856bc8d93650e95bead0d7b0e647951&oe=5BBEF398">
+
+
+                  </div>
+
+                  </div>
               </div>
-              <div class="row">
-                <div class="input-field col s6">
-                  <input class="validate" type="text" name="UserName" #UserName="ngModel" [(ngModel)]="user.UserName" required>
-                  <label data-error="Required field!">UserName</label>
-                </div>
-                <div class="input-field col s6">
-                  <input class="validate" type="password" name="Password" #Password="ngModel" [(ngModel)]="user.Password" required minlength="3">
-                  <label [attr.data-error]="Password.errors!=null?(Password.errors.required?'Required field!':'Minimum 3 characters needed'):''">Password</label>
-                </div>
-              </div>
-              <div class="row">
-                <div class="input-field col s12">
-                  <input class="validate" type="text" name="Email" #Email="ngModel" [(ngModel)]="user.Email" [pattern]="emailPattern">
-                  <label data-error="Invalid email!">Email</label>
-                </div>
-              </div>
-              <div class="row">
-                <div class="input-field col s6">
-                  <input type="text" name="FirstName" #FirstName="ngModel" [(ngModel)]="user.FirstName">
-                  <label>First Name</label>
-                </div>
-                <div class="input-field col s6">
-                  <input type="text" name="LastName" #LastName="ngModel" [(ngModel)]="user.LastName">
-                  <label>Last Name</label>
-                </div>
-              </div>
-              <div class="row">
-                <div class="input-field col s12">
-                  <button [disabled]="!userRegistrationForm.valid" class="btn-large btn-submit" type="submit">Submit</button>
-                </div>
+            </div>
 
-                <div class="input-field col s12">
-                  <a  routerLink='/login' routerLinkActive='active'>Already have any account ? Sign In</a>
-                </div>
 
-              </div>
-            </form>
+      </div>
 
+
+    </div>
+
+
+    <div class="row">
+      <div class="input-field col s6">
+
+        <div class="row">
+          <div class="input-field col s12">
+
+            <input class="validate" type="text" name="title" placeholder="Title" #UserName="ngModel"
+                   [(ngModel)]="content.title">
+            <label data-error="Required field!"></label>
 
           </div>
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
+
+          <div class="input-field col s12">
+
+            <div class="row">
+              <div class="input-field col s6">
+                <mat-form-field>
+                  <mat-select placeholder="Select status">
+                    <mat-option *ngFor="let status of statusList" [value]="status.statusId">
+                      {{ status.statusName }}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+
+
+              <div class="input-field col s6">
+                <mat-form-field>
+                  <mat-select placeholder="Select priority">
+                    <mat-option *ngFor="let status of statusList" [value]="status.statusId">
+                      {{ status.statusName }}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+      <div class="input-field col s6">
+                  <textarea class="validate khabri_add_content_textarea" type="textarea"
+                            name="description" #Password="ngModel" placeholder="Description"
+                            [(ngModel)]="content.description" required minlength="300">
+                  </textarea>
+        <!--<input class="validate" type="textarea" name="description" #Password="ngModel" -->
+        <!--placeholder="Description" [(ngModel)]="content.description" required minlength="300">-->
+        <label
+          [attr.data-error]="Password.errors!=null?(Password.errors.required?'Required field!':'Minimum 3 characters needed'):''"></label>
+      </div>
+    </div>
+
+
+
+    <div class="row">
+      <div class="input-field col s12">
+        <tag-input placeholder="+Tag" [ngModel]="itemsAsObjects" [identifyBy]="'id'" [displayBy]="'name'" [maxItems]='3'
+                   name="tags"></tag-input>
+      </div>
+
+      <div class="input-field col s12">
+        <tag-input placeholder="+Latitude::Longitude" secondaryPlaceholder="+Location(eg=>17::29)"
+                   [onAdding]="onAdding" [ngModel]="locationsAsObjects" [identifyBy]="'id'" [displayBy]="'name'"
+                   [maxItems]='30' name="location"></tag-input>
+      </div>
+
+    </div>
+
+
+
+
+    <div class="row center">
+      <div class="input-field col s3 ">
+      </div>
+      <div class="input-field col s3 ">
+        <button [disabled]="!userRegistrationForm.valid" class="btn-large btn-submit" type="submit">Submit</button>
+      </div>
+      <div class="input-field col s3 ">
+        <button [disabled]="!userRegistrationForm.valid" class="btn-large btn-submit" type="submit">Cancel</button>
+      </div>
+    </div>
+
+
+  </form>
+
+
+</div>
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
 
 
