--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,7 +31,7 @@
 
 
         <div class="col s8  ">
-          <mat-label class="text_design" >{{userClaims.name}} </mat-label>
+          <mat-label class="text_design" >{{user.name}} </mat-label>
         </div>
 
       </div>
@@ -72,13 +72,6 @@
 
       </div>
       <div class="col s12 ">
-
-        <!--<ul class="tabs">-->
-          <!--<li class="tab col s3"><a href="#test1">Test 1</a></li>-->
-          <!--<li class="tab col s3"><a class="active" href="#test2">Test 2</a></li>-->
-          <!--<li class="tab col s3 disabled"><a href="#test3">Disabled Tab</a></li>-->
-          <!--<li class="tab col s3"><a href="#test4">Test 4</a></li>-->
-        <!--</ul>-->
       </div>
 
 
@@ -95,8 +88,7 @@
 
 
 
-    <router-outlet></router-outlet>
-
+    <router-outlet ></router-outlet>
 
   </div>
 
@@ -107,55 +99,3 @@
 
 </mat-drawer-container>
 
-
-
-
-
-
-
-
-
-
-
-
-
-<!--<mat-drawer-container class="example-container" autosize >-->
-
-  <!--<div class="example-sidenav-content-left" >-->
-    <!--<nav class="cloura">-->
-      <!--<div class="nav-wrapper">-->
-
-        <!--<a href="" class="brand-logo left layout-margin " >-->
-          <!--<i class="material-icons">menu</i></a>-->
-
-        <!--<a href="#" class="brand-logo center">-->
-          <!--<img  height="60" src="../assets/khabri.jpg">-->
-        <!--</a>-->
-
-
-        <!--<div class="row right ">-->
-          <!--<div class="col s2 ">-->
-            <!--<i class="material-icons">notifications_active</i>-->
-          <!--</div>-->
-
-
-
-          <!--<div class="col s2">-->
-            <!--<i class="material-icons">account_circle</i>-->
-          <!--</div>-->
-
-
-          <!--<div class="col s8  ">-->
-            <!--<mat-label class="text_design" >{{userClaims.name}} </mat-label>-->
-          <!--</div>-->
-
-        <!--</div>-->
-
-      <!--</div>-->
-    <!--</nav>-->
-
-  <!--</div>-->
-
-   <!--<router-outlet></router-outlet>-->
-
-<!--</mat-drawer-container>-->
