--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -14,7 +14,7 @@
 
   <!--admin view start-->
 
-  <div class="row " >
+  <div class="row "  *ngIf="user.userId ==2">
     <div class="col s12">
       <div class="row" >
         <div class="col s3">
