--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -98,7 +98,7 @@
             <div class="col s6 ">
 
                 <mat-form-field>
-                  <mat-select placeholder="Select status">
+                  <mat-select placeholder="Select status" [(value)]="selectedStatusId" >
                     <mat-option *ngFor="let status of statusList" [value]="status.statusId">
                       {{ status.statusName }}
                     </mat-option>
@@ -110,7 +110,6 @@
             </div>
 
             <div class="col s1  ">
-
 
               <a class="btn-floating btn-large waves-effect waves-light blue pulse" (click)="addContent(id)" ><i class="material-icons">add</i></a>
 
