--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -78,7 +78,7 @@
         <div class="col s4 ">
 
           <mat-form-field>
-            <mat-select placeholder="Select status" (change)="OnStatusSelect()">
+            <mat-select placeholder="Select status"  [(ngModel)]="selectedStatus" (change)="OnStatusSelect($event)">
               <mat-option *ngFor="let status of statusList" [value]="status.statusId">
                 {{ status.statusName }}
               </mat-option>
@@ -89,7 +89,7 @@
 
         </div>
 
-        <div class="col s3  ">
+        <div class="col s3  " *ngIf="user.isAdmin">
 
 
           <a class="btn-floating btn-large waves-effect waves-light blue pulse"><i class="material-icons">add</i></a>
