--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -1,9 +1,9 @@
 
 
 <div class="nav-wrapper">
-  <div class="col s12" >
-    <a href="/home/channel" class="breadcrumb blue-text">channel</a>
-    <a  role="button" class="breadcrumb blue-text"> </a>
+  <div class="col s12 breadcrumb blue-text " >
+    <span  (click)="naviagte()"  class=" breadcrumb-item  pointer">channel</span> >>
+    <span  role="button" class="breadcrumb-item "> </span>
 
   </div>
 </div>
