--- a/src/styles.css
+++ b/src/styles.css
@@ -92,7 +92,7 @@ div.error-message i{
 
 
 .side-nav-style{
-  background-color: #6E6767;
+  background-color: #E5E6E6;
 }
 
 .mat-list-item-content {
