--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -144,6 +144,15 @@
 
 
               </div>
+
+              <div  >
+
+                <span class="clour_darkgray justify  " style="font-size: 0.75em; margin-left: 1%">Added On :: {{content.dateAdded |date : format : shortDate}}</span>
+
+                <span class="clour_darkgray justify " *ngIf="content.dateAdded != content.dateModified" style="font-size: 0.75em; margin-left: 25%" >Modified On :: {{content.dateModified |date : format : shortDate}}</span>
+
+              </div>
+
             <div class="card-action ">
                 <span class="pointer" (click)="play(content.audioUrl,content.contentId)" >
                   <mat-icon class=" small material-icons pointer"  *ngIf="content.audioUrl && currntPlayerId !=content.contentId" > play_circle_outline</mat-icon>
