--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -154,7 +154,7 @@
               </div>
 
             <div class="card-action ">
-                <span class="pointer" (click)="play(content.audioUrl,content.contentId)" >
+                <span class="pointer" (click)="play(editContent.audioUrl,content.contentId)" >
                   <mat-icon class=" small material-icons pointer"  *ngIf="content.audioUrl && currntPlayerId !=content.contentId" > play_circle_outline</mat-icon>
 
                   <mat-icon class=" small material-icons pointer" *ngIf="!audio.paused && currntPlayerId ==content.contentId" > pause_circle_outline</mat-icon>
@@ -166,7 +166,7 @@
                   <a class="pointer"><i class="material-icons" style="color:gray">delete</i></a>
 
 
-                  <a class="pointer" ><i class="material-icons" style="color:gray">edit</i></a>
+                  <a class="pointer"  (click)="editContent(content.contentId)"><i class="material-icons" style="color:gray">edit</i></a>
 
             </div>
 
